--- a/toxicity_site/docker-compose.yml
+++ b/toxicity_site/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   web:
     build: .
     command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-    container_name: site_service
+    container_name: site
     volumes:
-      - .:/site_service
+      - .:/site
     ports:
       - "8000:8000"
